--- a/css/desktop/_6-projectbox-desktop.scss
+++ b/css/desktop/_6-projectbox-desktop.scss
@@ -11,7 +11,7 @@ $widthbox: 33vw;
     overflow-y:scroll;
     overflow-x: hidden;
     background: $dark;
-    border: 1px solid $cold;
+    border: 2px solid $cold;
     z-index: 15;
     display: flex;
     flex-direction: column;
